5.2.7
-----
1. Fix download via browser.
2. Don't add HTLM formatting to weblink entries.

5.2.6
-----
1. Allow to open server settings via 'action=dlg.open/serversettings' URL
   query.
2. Tweak maskable icon.
3. Add a 1024x1024 icon.
4. Don't add 80x80 icon to HTML for mobile devices.
5. Only refresh MAI album column if applicable.
6. Fix colour of toggle queue button in desktop now-playing bar if using
   coloured toolbars.

5.2.5
-----
1. Make strings HTML safe by replacing less than and greater than signs with
   similar Unicode characters.
2. Fix touch/click area of play/pause button when on right in now-playing bar.
3. Fix MAI view when now-playing bar replaces mobile navigation.
4. Fix activating rescans, etc., when prompted to do so in 'Server settings'.
5. Fix flicker when collapse mobile now-playing.
6. Close now-playing, and MAI, with 'Esc' (or back swipe in APK).
7. Append category title to 'Search within list' hint.
8. Don't hide search hints.

5.2.4
-----
1. Fix setting colour from cover when colour setting changed in settings.
2. Re-add showing of now-playing menu on context/long-press of image.
3. Dim disabled items in server-side, and extra player, settings.
4. If combobox is disabled then don't show its menu.
5. Add 'Play' button to 'Add URL to queue dialog.
6. Hide 'Loading...' message after a few seconds.
7. Fix position of '(?)' buttons in 'Additional Browse Modes'
8. Automatically add 'npAutoClose=false' to 'np-only'
9. Fix 'np-only' view metrics.

5.2.3
-----
 1. In mobile layout, if queue is cleared then switch to browse view.
 2. Take top/bottom padding into account in more places.
 3. Add "npAutoClose=false" URL query parameter to stop now-playing
    auto-close when no tracks.
 4. Fix updating some coloured SVG icons when using colour from cover and cover
    changes.
 5. Resize more metrics when mobile keyboard shown.
 6. Allow long words to be broken up for word-wrap in now-playing.