@@ -2,6 +2,7 @@
 -----
 1. Fix download via browser.
 2. Don't add HTLM formatting to weblink entries.
+3. If delete a saved 'Random Mix' then also un-pin from homescreen.
 
 5.2.6
 -----
